--- a/software/web/static/cams.html
+++ b/software/web/static/cams.html
@@ -5,7 +5,9 @@
 <script>
     function recalibrateStream(){
         console.log("Recal called")
-        fetch("http://192.168.55.1:5000/vid", {
+        // fetch("http://192.168.55.1:5000/vid", {
+        fetch("http://localhost:5000/vid", {
+
             method: "post",
             headers: {
                 'Accept': 'application/json',
@@ -31,9 +33,20 @@
 
 <button name="refresh" onclick="refreshStream()">Refresh</button>
 <button name="recalibrate" onclick="recalibrateStream()">Recalibrate</button>
+<a href="localhost:5000/panVid">Go to Panellum Example</a>
 
 <div id="imageHolder">
-    <img src="http://192.168.55.1:5000/vid" />
-</div>
+    <!-- <img src="http://192.168.55.1:5000/vid" /> -->
+    <!-- <video>
+        <img src="http://localhost:5000/vid" />
+    </video> -->
+    <img src="http://localhost:5000/vid" />
+    <!-- <video>
+        <source src="http://localhost:5000/vid" type="video/mjpeg"/>
+    </video> -->
 
-<!-- <img src="http://localhost:5000/vid" /> -->
+    <!-- <iframe width="640" height="480" src="http://localhost:5000/vid"></iframe> -->
+
+    <!-- <iframe width="885" height="498" src="https://www.youtube.com/embed/iLHuL3r-Gg0?autoplay=1" title="The Greatest BIRDS COLLECTION HD 4K ULTRA - Relaxing Music And Nature 4K TV" frameborder="0" allow="autoplay; picture-in-picture" allowfullscreen></iframe> -->
+
+</div>
