--- a/software/web/static/html/panellumSingleImg.html
+++ b/software/web/static/html/panellumSingleImg.html
@@ -69,8 +69,8 @@
       image.onload = function(){
         viewer.setUpdate(true);
       }
-      // image.src = 'http://192.168.55.1:5000/vid';
-      image.src = '../images/fullPanoLab_5.jpg'
+      image.src = 'http://192.168.55.1:5000/vid';
+      // image.src = '../images/fullPanoLab_5.jpg'
       
       // Make buttons work
 
