--- a/software/web/static/panellumStream.html
+++ b/software/web/static/panellumStream.html
@@ -106,7 +106,7 @@
               })
               .then( (response) => { 
                   if (response.status==200)
-                    console.log("Good response")
+                    console.log("Good response",response)
                   else
                     console.log("An error occured",response)
                   // refreshStream()
